# src/api/model/index.ts
@@ -32,6 +32,8 @@ export * from "./getApiV1FormsSearch200";
 export * from "./getApiV1FormsSearchMode";
 export * from "./getApiV1FormsSearchParams";
 export * from "./getApiV1FormsSearchStatus";
+export * from "./getApiV1SubmissionsSummaryAccessibility";
+export * from "./getApiV1SubmissionsSummaryParams";
 export * from "./getApiV1Users200";
 export * from "./getApiV1UsersByOrgParams";
 export * from "./getApiV1UsersId200";
@@ -68,6 +70,8 @@ export * from "./refreshToken";
 export * from "./registerRequest";
 export * from "./registerResponse";
 export * from "./role";
+export * from "./submissionsSummaryResponse";
+export * from "./summaryItem";
 export * from "./tokens";
 export * from "./uploadFormImages201";
 export * from "./uploadFormImagesBody";
@@ -78,3 +82,4 @@ export * from "./userOrgId";
 export * from "./userRolesResponse";
 export * from "./usersByOrgResponse";
 export * from "./usersByOrgResponseUsers";
+export * from "./_summaryItemId";
